--- a/S04.02-Exercise-DisplayDayForecast/app/src/main/res/values/strings.xml
+++ b/S04.02-Exercise-DisplayDayForecast/app/src/main/res/values/strings.xml
@@ -132,6 +132,8 @@
 
     <string name="condition_unknown">Unknown (<xliff:g id="conditionId">%1$d</xliff:g>)</string>
 
+    <string name="detail_weather">Nothing to show!</string>
+
 
     <!-- - - - - - - - - - - -->
     <!-- Used by NetworkUtils-->
