--- a/S06.01-Exercise-LaunchSettingsActivity/app/src/main/res/values/strings.xml
+++ b/S06.01-Exercise-LaunchSettingsActivity/app/src/main/res/values/strings.xml
@@ -29,8 +29,6 @@
     <string name="action_map">Map Location</string>
     <string name="action_share">Share</string>
 
-    <!--TODO (3) Add a string called action_settings with value of Settings-->
-
     <!--Used in overflow menu to refresh weather data-->
     <string name="action_refresh">Refresh</string>
 
@@ -170,6 +168,7 @@
     <string name="condition_962">Hurricane</string>
 
     <string name="condition_unknown">Unknown (<xliff:g id="conditionId">%1$d</xliff:g>)</string>
+    <string name="action_settings">Settings</string>
 
 
     <!-- - - - - - - - - - - -->
