--- a/S06.02-Exercise-SettingsFragment/app/src/main/res/values/strings.xml
+++ b/S06.02-Exercise-SettingsFragment/app/src/main/res/values/strings.xml
@@ -70,6 +70,8 @@
     <!-- Value in SharedPreferences for imperial temperature unit option [CHAR LIMIT=NONE] -->
     <string name="pref_units_imperial" translatable="false">imperial</string>
 
+    <string name="pref_units_default" translatable="false">@string/pref_units_metric</string>
+
 
     <!-- - - - - - - - - - - - - -->
     <!--Used by SunshineDateUtils-->
@@ -170,7 +172,6 @@
     <string name="condition_962">Hurricane</string>
 
     <string name="condition_unknown">Unknown (<xliff:g id="conditionId">%1$d</xliff:g>)</string>
-
 
     <!-- - - - - - - - - - - -->
     <!-- Used by NetworkUtils-->
